<resources>
    <string name="app_name">Fifa Ultimate Bravery</string>
    <string name="userName">Username</string>
    <string name="passWord">Password</string>
    <string name="logIn">Log in</string>
    <string name="register">Register</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="menuTitle" translatable="false">FUB Menu</string>
    <string name="generateMatch">Generate match-up</string>
    <string name="viewStats">View statistics</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log out</string>
    <string name="add">add</string>
    <string name="matchUp">Match-up</string>
    <string name="you">You</string>
    <string name="opponent">Opponent</string>
    <string name="settings">Settings</string>
    <string name="reGenerate">Re-generate</string>
    <string name="enterResults">Enter match results</string>
    <string name="rageQuit">Rage quit</string>
    <string name="save">Save</string>
    <string name="goalsHint">Goals</string>
    <string name="submit">Submit</string>
    <string name="statsTitle">Statistics</string>
    <string name="gamesPlayed">Games played:</string>
    <string name="wins">Wins:</string>
    <string name="winPercentage">Win percentage:</string>
    <string name="versus" translatable="false">vs.</string>
    <string name="myClubDummy" translatable="false">-</string>
    <string name="myLeagueDummy" translatable="false">-</string>
    <string name="opponentClubDummy" translatable="false">-</string>
    <string name="opponentLeagueDummy" translatable="false">-</string>
    <string name="gamesPlayedDummy" translatable="false">games</string>
    <string name="winsDummy" translatable="false">wins</string>
    <string name="myGoalsStatDummy" translatable="false">0</string>
    <string name="opponentGoalsStatDummy" translatable="false">0</string>
    <string name="winPercentageDummy" translatable="false">percentage</string>
    <string name="dummyResult" translatable="false">0</string>
    <string name="SpecificLeagues">Only selecting teams from </string>
    <string name="WagerSuccessToast">Wager added successfully</string>
    <string name="WagerFailedToast">Wager failed to be added, try again</string>
    <string name="MatchSavedSuccess">Match saved</string>
    <string name="MatchSavedFail">Couldnt save match, try again</string>

    <string-array name="Leagues">
        <item>PL</item>
        <item>LaLiga</item>
        <item>BundesLiga</item>
        <item>Ligue 1</item>
        <item>3F SuperLiga</item>
    </string-array>
    <!--Wagers-->
    <string-array name="WagersList">
        <item >Loser gives 10 bucks to winner</item>
        <item >Loser gets a wedgie - winner gives</item>
        <item >Loser takes a shot of vodka</item>
        <item >Loser gets a flat hand slap - winner swings</item>
        <item >Loser sniffs winners socks</item>
        <item >Loser licks winners back</item>
        <item >Loser does 20 push-ups</item>
        <item >Loser eats spoonful of condiment - winners choice</item>
        <item >Loser chugs a bottle of beer</item>
        <item >Loser gets new FB profile picture for 1 hour - winners choice</item>
    </string-array>

    <string name="wagerAddHint">Add wager here</string>
    <string name="wagerDummy" translatable="false">Wager</string>
    <string name="wagerViewBnt">View wagers</string>
    <string name="FacebookErrorMessage">\"No Facebook found for \"</string>
    <string name="InstagramErrorMessage">\"No Instagram account found for \"</string>
    <string name="WagerTitle">Swipe a wager to delete it</string>


</resources>